--- a/movie.ipynb
+++ b/movie.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Define the input frames directory, audio file, and caption text\n",
-    "frames_directory = \"./Frames/\"  # Replace with the path to your frames\n",
+    "frames_directory = \"Frames\\Frame2\"  # Replace with the path to your frames\n",
     "audio_file = \"./Audio.mp3\"  # Replace with the path to your audio file\n",
     "captions = list(phrases[\"Phrase\"])  # Replace with your captions"
    ]
@@ -57,11 +57,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_files = [\n",
-    "    os.path.join(frames_directory, filename)\n",
-    "    for filename in os.listdir(frames_directory)\n",
-    "    if filename.endswith(\".png\")\n",
-    "]"
+    "refresh_directions = [\n",
+    "    \"moving left-left\",\n",
+    "    \"moving left\",\n",
+    "    \"moving up-left\",\n",
+    "    \"moving up\",\n",
+    "    \"moving forward\",\n",
+    "    \"moving up-right\",\n",
+    "    \"moving right\",\n",
+    "    \"moving right-right\",\n",
+    "    \"moving down-right\",\n",
+    "    \"moving down\",\n",
+    "    \"moving backward\",\n",
+    "    \"moving down-left\",\n",
+    "]\n",
+    "\n",
+    "directions = {\n",
+    "    \"moving left\": 1,\n",
+    "    \"moving right\": 2,\n",
+    "    \"moving up\": 3,\n",
+    "    \"moving down\": 4,\n",
+    "    \"moving forward\": 5,\n",
+    "    \"moving backward\": 6,\n",
+    "    \"moving up-left\": 7,\n",
+    "    \"moving up-right\": 8,\n",
+    "    \"moving down-left\": 9,\n",
+    "    \"moving down-right\": 10,\n",
+    "    \"moving left-left\": 11,\n",
+    "    \"moving right-right\": 12,\n",
+    "}"
    ]
   },
   {
@@ -70,8 +94,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len_words = [len(sentence.split()) for sentence in phrases[\"Phrase\"]]\n",
+    "second = 2\n",
+    "frame_persistance_time = [(len_word / second) for len_word in len_words]\n",
+    "fps = 24\n",
+    "num_frames = [\n",
+    "    int(frame_persistance_time[i] * fps) for i in range(len(frame_persistance_time))\n",
+    "]\n",
+    "num_frames_per_direction = [\n",
+    "    num_frame / len(refresh_directions) for num_frame in num_frames\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_files = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 0\n",
+    "for i in range(phrases.shape[0]):\n",
+    "    for j in range(int(num_frames_per_direction[k])):\n",
+    "        a = (-1) ** j\n",
+    "        refresh_directions = refresh_directions[::a]\n",
+    "        for direction in refresh_directions:\n",
+    "            image_files.append(\n",
+    "                f\"Frames\\\\Frame2\\\\{i+1}_{j+1}_{directions[direction]}.png\"\n",
+    "            )\n",
+    "    k += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7212"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(image_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sort the image files based on their filenames\n",
-    "image_files.sort()\n",
+    "# image_files.sort()\n",
     "\n",
     "# Load the audio file\n",
     "audio = AudioFileClip(audio_file)\n",
@@ -82,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,15 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moviepy - Building video GenesisAI_prototype_uni.mp4.\n",
-      "MoviePy - Writing audio in GenesisAI_prototype_uniTEMP_MPY_wvf_snd.mp3\n"
+      "Moviepy - Building video GenesisAI_prototype_lv2_uni.mp4.\n",
+      "MoviePy - Writing audio in GenesisAI_prototype_lv2_uniTEMP_MPY_wvf_snd.mp3\n"
      ]
     },
     {
@@ -148,7 +237,7 @@
      "output_type": "stream",
      "text": [
       "MoviePy - Done.\n",
-      "Moviepy - Writing video GenesisAI_prototype_uni.mp4\n",
+      "Moviepy - Writing video GenesisAI_prototype_lv2_uni.mp4\n",
       "\n"
      ]
     },
@@ -156,7 +245,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                \r"
+      "                                                              \r"
      ]
     },
     {
@@ -164,7 +253,7 @@
      "output_type": "stream",
      "text": [
       "Moviepy - Done !\n",
-      "Moviepy - video ready GenesisAI_prototype_uni.mp4\n"
+      "Moviepy - video ready GenesisAI_prototype_lv2_uni.mp4\n"
      ]
     }
    ],
@@ -177,9 +266,9 @@
     "\n",
     "final_video = final_video.set_audio(audio)\n",
     "\n",
-    "fps = int(audio.duration / len(image_files))\n",
+    "fps = 3\n",
     "\n",
-    "final_video.write_videofile(\"GenesisAI_prototype_uni.mp4\", codec=\"libx264\", fps=fps)"
+    "final_video.write_videofile(\"GenesisAI_prototype_lv2_uni.mp4\", codec=\"libx264\", fps=fps)"
    ]
   }
  ],
